--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
+# Metadata
 .idea
+__pycache__
+.vscode
+
+# Unity
+unity/Library
+unity/Temp
+unity/Obj
+unity/Build
+unity/Builds
+unity/Logs
+unity/UserSettings
